[metadata]
name = aga8-python
version = 0.0.2b
author = Sarit Ritwirune
author_email = sarit@elcolie.com
description = Python version of AGA8 detail module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elcolie/AGA8-python
project_urls =
  Bug Tracker = https://github.com/elcolie/AGA8-python/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[option]
package_dir =
  = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src

[options.package_data]
aga8-python = py.typed

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

